# micrograd

./: .gitignore  README.md  micrograd_from_scratch.ipynb  pyproject.toml
