[project]
name = "micrograd"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Spycner", email = "pascal98kraus@gmail.com" }
]
dependencies = [
    "jupyter>=1.0.0",
    "micrograd>=0.1.0",
    "numpy>=1.26.4",
    "matplotlib>=3.8.4",
    "graphviz>=0.20.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/micrograd"]
